--- a/package.json
+++ b/package.json
@@ -18,7 +18,7 @@
     "formik": "^2.4.9",
     "jsonwebtoken": "^9.0.3",
     "lucide-react": "^0.553.0",
-    "next": "16.0.1",
+    "next": "^16.0.10",
     "postcss": "^8.5.6",
     "radix-ui": "^1.4.3",
     "react": "^18.3.1",
